// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Integration: main images generation > produces deterministic manifest and expected directory tree 1`] = `
{
  "alpha.png": {
    "color": "rgb(8,248,8)",
    "original": {
      "format": "png",
      "height": 30,
      "path": "alpha.png",
      "width": 40,
    },
    "outputs": [
      "blurs/alpha.png",
      "details/alpha.jpeg",
      "previews-admin/alpha.jpeg",
      "previews-avif/alpha.avif",
      "previews-webp/alpha.webp",
      "previews-xl-avif/alpha.avif",
      "previews-xl-webp/alpha.webp",
      "previews-xl/alpha.jpeg",
      "previews-xxs/alpha.jpeg",
      "previews/alpha.jpeg",
    ],
    "placeholder": {
      "height": null,
      "type": null,
      "width": null,
    },
    "variants": {
      "avif": [
        {
          "height": null,
          "path": "/images/previews-avif/alpha.avif",
          "width": 370,
        },
        {
          "height": null,
          "path": "/images/previews-xl-avif/alpha.avif",
          "width": 534,
        },
      ],
      "jpeg": [
        {
          "height": 30,
          "path": "/images/details/alpha.jpeg",
          "width": 40,
        },
        {
          "height": 30,
          "path": "/images/previews-admin/alpha.jpeg",
          "width": 40,
        },
        {
          "height": 30,
          "path": "/images/previews-xxs/alpha.jpeg",
          "width": 40,
        },
        {
          "height": null,
          "path": "/images/previews/alpha.jpeg",
          "width": 370,
        },
        {
          "height": null,
          "path": "/images/previews-xl/alpha.jpeg",
          "width": 534,
        },
      ],
      "webp": [
        {
          "height": null,
          "path": "/images/previews-webp/alpha.webp",
          "width": 370,
        },
        {
          "height": null,
          "path": "/images/previews-xl-webp/alpha.webp",
          "width": 534,
        },
      ],
    },
  },
  "big.jpeg": {
    "color": "rgb(120,56,184)",
    "original": {
      "format": "jpeg",
      "height": 3000,
      "path": "big.jpeg",
      "width": 4000,
    },
    "outputs": [
      "blurs/big.png",
      "details/big.jpeg",
      "previews-admin/big.jpeg",
      "previews-avif/big.avif",
      "previews-webp/big.webp",
      "previews-xl-avif/big.avif",
      "previews-xl-webp/big.webp",
      "previews-xl/big.jpeg",
      "previews-xxs/big.jpeg",
      "previews/big.jpeg",
    ],
    "placeholder": {
      "height": null,
      "type": null,
      "width": null,
    },
    "variants": {
      "avif": [
        {
          "height": null,
          "path": "/images/previews-avif/big.avif",
          "width": 370,
        },
        {
          "height": null,
          "path": "/images/previews-xl-avif/big.avif",
          "width": 534,
        },
      ],
      "jpeg": [
        {
          "height": 127,
          "path": "/images/previews-xxs/big.jpeg",
          "width": 190,
        },
        {
          "height": null,
          "path": "/images/previews/big.jpeg",
          "width": 370,
        },
        {
          "height": 401,
          "path": "/images/previews-admin/big.jpeg",
          "width": 534,
        },
        {
          "height": null,
          "path": "/images/previews-xl/big.jpeg",
          "width": 534,
        },
        {
          "height": 1280,
          "path": "/images/details/big.jpeg",
          "width": 1707,
        },
      ],
      "webp": [
        {
          "height": null,
          "path": "/images/previews-webp/big.webp",
          "width": 370,
        },
        {
          "height": null,
          "path": "/images/previews-xl-webp/big.webp",
          "width": 534,
        },
      ],
    },
  },
  "exif-orient-6.jpeg": {
    "color": "rgb(200,24,56)",
    "original": {
      "format": "jpeg",
      "height": 400,
      "path": "exif-orient-6.jpeg",
      "width": 600,
    },
    "outputs": [
      "blurs/exif-orient-6.png",
      "details/exif-orient-6.jpeg",
      "previews-admin/exif-orient-6.jpeg",
      "previews-avif/exif-orient-6.avif",
      "previews-webp/exif-orient-6.webp",
      "previews-xl-avif/exif-orient-6.avif",
      "previews-xl-webp/exif-orient-6.webp",
      "previews-xl/exif-orient-6.jpeg",
      "previews-xxs/exif-orient-6.jpeg",
      "previews/exif-orient-6.jpeg",
    ],
    "placeholder": {
      "height": null,
      "type": null,
      "width": null,
    },
    "variants": {
      "avif": [
        {
          "height": null,
          "path": "/images/previews-avif/exif-orient-6.avif",
          "width": 370,
        },
        {
          "height": null,
          "path": "/images/previews-xl-avif/exif-orient-6.avif",
          "width": 534,
        },
      ],
      "jpeg": [
        {
          "height": 127,
          "path": "/images/previews-xxs/exif-orient-6.jpeg",
          "width": 190,
        },
        {
          "height": 534,
          "path": "/images/previews-admin/exif-orient-6.jpeg",
          "width": 356,
        },
        {
          "height": null,
          "path": "/images/previews/exif-orient-6.jpeg",
          "width": 370,
        },
        {
          "height": 600,
          "path": "/images/details/exif-orient-6.jpeg",
          "width": 400,
        },
        {
          "height": null,
          "path": "/images/previews-xl/exif-orient-6.jpeg",
          "width": 534,
        },
      ],
      "webp": [
        {
          "height": null,
          "path": "/images/previews-webp/exif-orient-6.webp",
          "width": 370,
        },
        {
          "height": null,
          "path": "/images/previews-xl-webp/exif-orient-6.webp",
          "width": 534,
        },
      ],
    },
  },
  "portrait.jpeg": {
    "color": "rgb(24,56,232)",
    "original": {
      "format": "jpeg",
      "height": 900,
      "path": "portrait.jpeg",
      "width": 600,
    },
    "outputs": [
      "blurs/portrait.png",
      "details/portrait.jpeg",
      "previews-admin/portrait.jpeg",
      "previews-avif/portrait.avif",
      "previews-webp/portrait.webp",
      "previews-xl-avif/portrait.avif",
      "previews-xl-webp/portrait.webp",
      "previews-xl/portrait.jpeg",
      "previews-xxs/portrait.jpeg",
      "previews/portrait.jpeg",
    ],
    "placeholder": {
      "height": null,
      "type": null,
      "width": null,
    },
    "variants": {
      "avif": [
        {
          "height": null,
          "path": "/images/previews-avif/portrait.avif",
          "width": 370,
        },
        {
          "height": null,
          "path": "/images/previews-xl-avif/portrait.avif",
          "width": 534,
        },
      ],
      "jpeg": [
        {
          "height": 127,
          "path": "/images/previews-xxs/portrait.jpeg",
          "width": 190,
        },
        {
          "height": 534,
          "path": "/images/previews-admin/portrait.jpeg",
          "width": 356,
        },
        {
          "height": null,
          "path": "/images/previews/portrait.jpeg",
          "width": 370,
        },
        {
          "height": null,
          "path": "/images/previews-xl/portrait.jpeg",
          "width": 534,
        },
        {
          "height": 900,
          "path": "/images/details/portrait.jpeg",
          "width": 600,
        },
      ],
      "webp": [
        {
          "height": null,
          "path": "/images/previews-webp/portrait.webp",
          "width": 370,
        },
        {
          "height": null,
          "path": "/images/previews-xl-webp/portrait.webp",
          "width": 534,
        },
      ],
    },
  },
  "square.webp": {
    "color": "rgb(248,200,8)",
    "original": {
      "format": "webp",
      "height": 300,
      "path": "square.webp",
      "width": 300,
    },
    "outputs": [
      "blurs/square.png",
      "details/square.jpeg",
      "previews-admin/square.jpeg",
      "previews-avif/square.avif",
      "previews-webp/square.webp",
      "previews-xl-avif/square.avif",
      "previews-xl-webp/square.webp",
      "previews-xl/square.jpeg",
      "previews-xxs/square.jpeg",
      "previews/square.jpeg",
    ],
    "placeholder": {
      "height": null,
      "type": null,
      "width": null,
    },
    "variants": {
      "avif": [
        {
          "height": null,
          "path": "/images/previews-avif/square.avif",
          "width": 370,
        },
        {
          "height": null,
          "path": "/images/previews-xl-avif/square.avif",
          "width": 534,
        },
      ],
      "jpeg": [
        {
          "height": 127,
          "path": "/images/previews-xxs/square.jpeg",
          "width": 190,
        },
        {
          "height": 300,
          "path": "/images/details/square.jpeg",
          "width": 300,
        },
        {
          "height": 300,
          "path": "/images/previews-admin/square.jpeg",
          "width": 300,
        },
        {
          "height": null,
          "path": "/images/previews/square.jpeg",
          "width": 370,
        },
        {
          "height": null,
          "path": "/images/previews-xl/square.jpeg",
          "width": 534,
        },
      ],
      "webp": [
        {
          "height": null,
          "path": "/images/previews-webp/square.webp",
          "width": 370,
        },
        {
          "height": null,
          "path": "/images/previews-xl-webp/square.webp",
          "width": 534,
        },
      ],
    },
  },
}
`;

exports[`Integration: main images generation > produces deterministic manifest and expected directory tree 2`] = `
[
  "blurs/alpha.png",
  "blurs/big.png",
  "blurs/exif-orient-6.png",
  "blurs/portrait.png",
  "blurs/square.png",
  "details/alpha.jpeg",
  "details/big.jpeg",
  "details/exif-orient-6.jpeg",
  "details/portrait.jpeg",
  "details/square.jpeg",
  "images.manifest.json",
  "previews-admin/alpha.jpeg",
  "previews-admin/big.jpeg",
  "previews-admin/exif-orient-6.jpeg",
  "previews-admin/portrait.jpeg",
  "previews-admin/square.jpeg",
  "previews-avif/alpha.avif",
  "previews-avif/big.avif",
  "previews-avif/exif-orient-6.avif",
  "previews-avif/portrait.avif",
  "previews-avif/square.avif",
  "previews-webp/alpha.webp",
  "previews-webp/big.webp",
  "previews-webp/exif-orient-6.webp",
  "previews-webp/portrait.webp",
  "previews-webp/square.webp",
  "previews-xl-avif/alpha.avif",
  "previews-xl-avif/big.avif",
  "previews-xl-avif/exif-orient-6.avif",
  "previews-xl-avif/portrait.avif",
  "previews-xl-avif/square.avif",
  "previews-xl-webp/alpha.webp",
  "previews-xl-webp/big.webp",
  "previews-xl-webp/exif-orient-6.webp",
  "previews-xl-webp/portrait.webp",
  "previews-xl-webp/square.webp",
  "previews-xl/alpha.jpeg",
  "previews-xl/big.jpeg",
  "previews-xl/exif-orient-6.jpeg",
  "previews-xl/portrait.jpeg",
  "previews-xl/square.jpeg",
  "previews-xxs/alpha.jpeg",
  "previews-xxs/big.jpeg",
  "previews-xxs/exif-orient-6.jpeg",
  "previews-xxs/portrait.jpeg",
  "previews-xxs/square.jpeg",
  "previews/alpha.jpeg",
  "previews/big.jpeg",
  "previews/exif-orient-6.jpeg",
  "previews/portrait.jpeg",
  "previews/square.jpeg",
]
`;
